--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  min-width: 0;
 }
 
 /* ------------------------------------------------------------------ */
@@ -124,4 +125,5 @@
 
 .tabPanel {
   outline: none;
+  min-width: 0;
 }
